--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         <section class="proyectos">
           <h3>VARIANTES DEL PROYECTO</h3>
           <ul class="nemiun">
-            <li><a href="https://josue1dario2.github.io/Nemium-A/" target="_blank">Nemium A</a></li>
-            <li><a href="https://josue1dario2.github.io/Nemium-B/" target="_blank">Nemium B</a></li>
-            <li><a href="" target="_blank">Nemium C</a></li>
-            <li><a href="" target="_blank">Nemium D</a></li>
-            <li><a href="" target="_blank">Nemium E</a></li>
+            <li><a href="https://josue1dario2.github.io/Nemium-A/">Nemium A</a></li>
+            <li><a href="https://josue1dario2.github.io/Nemium-B/">Nemium B</a></li>
+            <li><a href="https://josue1dario2.github.io/Nemium-C/">Nemium C</a></li>
+            <li><a href="https://josue1dario2.github.io/Nemium-D/">Nemium D</a></li>
+            <li><a href="https://josue1dario2.github.io/Nemium-E/">Nemium E</a></li>
           </ul>
         </section>
         <section class="navegator">
